<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.alesdias.projectapp.CompanySettings">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:gravity="center"
                  android:orientation="vertical"
                  android:layout_weight="1">

        <EditText android:id="@+id/comp_set_name"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/company_name"/>

        <EditText android:id="@+id/comp_set_shift"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/company_shift_time"/>

        <EditText android:id="@+id/comp_set_latitude"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/company_latitude"/>

        <EditText android:id="@+id/comp_set_longitude"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/company_longitude"/>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:gravity="center_horizontal"
                  android:orientation="horizontal"
                  android:layout_weight="2">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:gravity="center_horizontal"
                      android:orientation="horizontal"
                      android:layout_weight="1">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_save_comp"
                android:onClick="onSaveCompanySettings"/>

        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:gravity="center_horizontal"
                      android:orientation="horizontal"
                      android:layout_weight="1">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_back"
                android:onClick="onBackCLickCompanySettings"/>

        </LinearLayout>



    </LinearLayout>

</LinearLayout>
