<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              app:layout_behavior="@string/appbar_scrolling_view_behavior"
              tools:showIn="@layout/activity_main">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:gravity="center"
                  android:layout_weight="2"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">

        <EditText android:id="@+id/date_work_log"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:gravity="start"
                  android:hint="@string/date_work_log_hint"
                  android:inputType="date"
                  android:textAlignment="center"
                  android:onClick="onDateClick"/>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:orientation="horizontal"
                      android:gravity="center"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                          android:orientation="horizontal"
                          android:gravity="center"
                          android:layout_weight="1"
                          android:layout_width="match_parent"
                          android:layout_height="match_parent">

                <EditText android:id="@+id/time_start_log"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:gravity="start"
                          android:hint="@string/start_log_hint"
                          android:inputType="time"
                          android:textAlignment="center"
                          android:onClick="onTimeClick"/>

            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                          android:orientation="horizontal"
                          android:gravity="center"
                          android:layout_weight="1"
                          android:layout_width="match_parent"
                          android:layout_height="match_parent">

                <EditText android:id="@+id/time_stop_log"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:gravity="start"
                          android:hint="@string/stop_log_hint"
                          android:inputType="time"
                          android:textAlignment="center"
                          android:onClick="onTimeClick"/>

            </LinearLayout>

        </LinearLayout>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_create_log"
                android:onClick="onSendMessageWorkLog"/>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:gravity="center"
                  android:layout_weight="1"
                  android:layout_width="wrap_content"
                  android:layout_height="match_parent">
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_log"
                android:background="@drawable/button_selector"
                android:onClick="onStartLog"/>

    </LinearLayout>


</LinearLayout>
